CRM_Connections/salesforce/force-app/main/default/objects/Chat_Stream_Event__e/Chat_Stream_Event__e.object-meta.xml
<CustomObject>
    <label>Chat Stream Event</label>
    <pluralLabel>Chat Stream Events</pluralLabel>
</CustomObject>