CRM_Connections/salesforce/force-app/main/default/objects/Chat_Stream_Event__e/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>