CRM_Connections/salesforce/force-app/main/default/objects/Chat_Stream_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Text</type>
    <length>40</length>
</CustomField>