CRM_Connections/salesforce/force-app/main/default/objects/Chat_Stream_Event__e/fields/Is_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Is_Terminal__c</fullName>
    <label>Is Terminal</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>