CRM_Connections/salesforce/force-app/main/default/objects/Chat_Stream_Event__e/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>