CRM_Connections/salesforce/force-app/main/default/objects/Chat_Stream_Event__e/fields/Transcript_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Entry_Id__c</fullName>
    <label>Transcript Entry Id</label>
    <type>Text</type>
    <length>36</length>
</CustomField>