CRM_Connections/salesforce/force-app/main/default/objects/Chat_Stream_Event__e/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Text</type>
    <length>18</length>
</CustomField>